--- a/app/scss/config/_responsive_sizing.scss
+++ b/app/scss/config/_responsive_sizing.scss
@@ -5,7 +5,7 @@ $break-extra-large: 1200px;
 
 @mixin respond-to($media){
     @if $media == handhelds {
-        @media only screen and (max-width: $break-med) { @content; }
+        @media only screen and (min-width: $break-small) and (max-width: $break-med) { @content; }
       }
       @else if $media == medium-screens {
         @media only screen and (min-width: $break-med - 1) and (max-width: $break-large - 1) { @content; }
