--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,8 @@
 @import './config/config.scss';
 @import './config/responsive_sizing.scss';
-@import './config/base.scss';
+// @import './config/base.scss';
+@import './modules/form.scss';
+@import './modules/buttons.scss';
+@import './modules/display.scss';
 
 
