--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,5 +4,6 @@
 @import './modules/form.scss';
 @import './modules/buttons.scss';
 @import './modules/display.scss';
+@import './modules/header.scss';
 
 
