--- a/src/scss/modules/_buttons.scss
+++ b/src/scss/modules/_buttons.scss
@@ -1,13 +1,16 @@
 .input__container-buttons{
     padding:1em;
     display:flex;
-    justify-content: center;
+    justify-content: space-evenly;
     background-color: purple;
     button{
         width: 40%;
         height: 2rem;
-        border-radius: 7px;
+        border-radius: 10px;
         font-size: 1.2rem;
+    }
+    .clear{
+        width:100%;
     }
     
 }
