--- a/src/scss/modules/_display.scss
+++ b/src/scss/modules/_display.scss
@@ -1,11 +1,16 @@
 .input__container-display{
-    justify-content: center;
     min-height: 3rem;
-    display:inline-flex;
-    font-size:2rem;
+    text-align:center;
     height: 100%;
+    width: 100%;
+    font-size:2rem;
+    span{
+        display:inline-flex;    
+        justify-content: center;
+        
+    }
 }
 .font-size-75{
-    font-size: .75rem;
+    font-size: .85rem;
     justify-content: center;
 }
