--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,5 +5,7 @@
 @import './modules/buttons.scss';
 @import './modules/display.scss';
 @import './modules/header.scss';
+@import './modules/form-group.scss';
+@import './modules/input-container.scss';
 
 
