--- a/src/scss/modules/_buttons.scss
+++ b/src/scss/modules/_buttons.scss
@@ -1,13 +1,14 @@
 .input__container-buttons{
     padding:1em;
     display:flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     background-color: purple;
+    
     button{
-        width: 40%;
+        width: 30%;
         height: 2rem;
         border-radius: 10px;
-        font-size: 1.2rem;
+        font-size: .8rem;
     }
     .clear{
         width:100%;
